# batvsrat_investigation_A_and_B

./: analysis.ipynb  cleaning_pipeline.ipynb  investigation-b.ipynb  pyproject.toml
